# rotop

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
rotop/: __init__.py  __main__.py  data_container.py  gui_main.py  rotop.py  top_runner.py  utility.py
src/rotop/: __init__.py  __main__.py  data_container.py  gui_main.py  main_cui.py  main_gui.py  rotop.py  top.py  top_runner.py  utility.py
src/visualizer/: visualize_csv.html  visualize_csv.py
